# bazel-layout

./: .gitignore  BUILD.bazel  README.md  WORKSPACE
go/: BUILD.bazel
go/src/: BUILD.bazel  run-gazelle.sh
go/src/github.com/: BUILD.bazel
go/src/github.com/mypackage/: BUILD.bazel  go.mod
go/src/github.com/mypackage/bar/: BUILD.bazel  bar.go
go/src/github.com/mypackage/baz/: BUILD.bazel  baz.go
