load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "baz",
    srcs = ["baz.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all_files",
    testonly = True,
    srcs = [
        "BUILD.bazel",
        "baz.go",
    ],
    visibility = ["//visibility:public"],
)
